# BaseAPI

./: .cliignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: exceptions.py  logging.py  registry.py  security.py
app/database/: base.py  engine.py  session.py
app/database/migrations/: env.py
app/database/migrations/versions/: 75b942b5939e_add_access_control_tables.py
app/modules/access/: __init__.py  dependencies.py  models.py  schemas.py  service.py
app/modules/auth/: __init__.py  dependencies.py  router.py  service.py
app/modules/system/: __init__.py  router.py
app/modules/users/: __init__.py  base.py  dependencies.py  models.py  router.py  service.py
app/system/: router.py
cli/: __init__.py  __main__.py  console.py  main.py  parser.py
cli/commands/: __init__.py  create.py  doctor.py  version.py
cli/registry/: __init__.py  commands.py  plugins.py
cli/services/: __init__.py  doctor.py
cli/templates/: loader.py
cli/utils/: copier.py  filesystem.py  ignore.py  manifest.py  renderer.py
docs/: modules-system.md  project.txt
docs/modules/: access.md  auth.md  users.md
quantum_core/: main.py
quantum_core/auth/: dependencies.py  router.py  service.py
quantum_core/core/: responses.py
quantum_core/database/migrations/: env.py
quantum_core/users/: dependencies.py  models.py  router.py  schemas.py  service.py
scripts/: seed.py  test_renderer.py
tests/: conftest.py  test.txt  test_db.py  test_health.py
