[project]
name = "baseapi"
version = "0.1.0"
description = "Reusable FastAPI backend framework with authentication, authorization, and modular architecture"
readme = "README.md"
requires-python = ">=3.11"

license = { text = "Apache-2.0" }

authors = [
    { name = "BaseAPI Team" }
]

keywords = [
    "fastapi",
    "framework",
    "backend",
    "authentication",
    "authorization",
    "rbac",
    "starter",
    "api"
]

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-jose",
    "passlib[bcrypt]",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/QuantumCodr/BaseAPI"
Repository = "https://github.com/QuantumCodr/BaseAPI"
Documentation = "https://github.com/QuantumCodr/BaseAPI#readme"

[project.scripts]
baseapi = "cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
include = ["app*", "cli*"]